--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <img src="/public/assets/blue.svg" alt="Blue Vector" class="blue-vector" />
+    <img src="/public/assets/yellow.svg" alt="Yellow Vector" class="yellow-vector" />
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
